--- a/package.json
+++ b/package.json
@@ -42,6 +42,14 @@
         "title": "打开项目"
       },
       {
+        "command": "project-manager.openProjectInCurrentWindow",
+        "title": "在当前窗口打开项目"
+      },
+      {
+        "command": "project-manager.openProjectInNewWindow",
+        "title": "在新窗口打开项目"
+      },
+      {
         "command": "project-manager.renameProject",
         "title": "重命名项目"
       },
@@ -78,6 +86,16 @@
         }
       ],
       "view/item/context": [
+        {
+          "command": "project-manager.openProjectInCurrentWindow",
+          "when": "view == numberListView && viewItem == projectItem",
+          "group": "navigation@1"
+        },
+        {
+          "command": "project-manager.openProjectInNewWindow",
+          "when": "view == numberListView && viewItem == projectItem",
+          "group": "navigation@1"
+        },
         {
           "command": "project-manager.renameProject",
           "when": "view == numberListView && viewItem == projectItem",
