--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "project-manager",
-  "displayName": "project-manager",
-  "description": "",
+  "name": "better-project-manager",
+  "displayName": "Better Project Manager",
+  "description": "一个用于管理项目的VSCode扩展",
+  "author": {
+    "name": "Kaede Shimizu",
+    "email": "kaedeshimizu@qq.com"
+  },
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.105.0"
