--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Better Project Manager",
   "description": "一个用于管理项目的VSCode扩展",
   "publisher": "kaedeshimizu",
-  "icon": "./resources/logo.png",
+  "icon": "resources/logo.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/Kaede221/better-project-manager.git"
@@ -12,7 +12,7 @@
     "name": "Kaede Shimizu",
     "email": "kaedeshimizu@qq.com"
   },
-  "version": "0.0.1",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.105.0"
   },
