--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "一个用于管理项目的VSCode扩展",
   "publisher": "kaedeshimizu",
   "icon": "resources/logo.png",
+  "type": "commonjs",
   "repository": {
     "type": "git",
     "url": "https://github.com/Kaede221/better-project-manager.git"
