--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "publisher": "kaedeshimizu",
   "icon": "resources/logo.png",
   "type": "commonjs",
+  "keywords": [
+    "better",
+    "BPM",
+    "project manager"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Kaede221/better-project-manager.git"
@@ -15,7 +20,7 @@
   },
   "version": "0.0.3",
   "engines": {
-    "vscode": "^1.105.0"
+    "vscode": "^1.100.0"
   },
   "categories": [
     "Other"
