--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "name": "Kaede Shimizu",
     "email": "kaedeshimizu@qq.com"
   },
-  "version": "0.0.3",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.100.0"
   },
@@ -184,16 +184,16 @@
     "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "publish": "vsce publish"
+    "publish-market": "vsce publish"
   },
   "devDependencies": {
-    "@types/vscode": "^1.105.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
+    "@types/vscode": "^1.100.0",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
     "@typescript-eslint/parser": "^8.42.0",
-    "eslint": "^9.34.0",
     "esbuild": "^0.25.9",
+    "eslint": "^9.34.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.9.2"
   }
