feat(ui): 添加项目管理器新手引导 Webview 面板
引入交互式新手引导面板，首次安装或通过命令可唤起，引导用户快速了解插件基本操作功能，提升用户上手体验。
调整 README.md，相关示意图移至 Webview 步骤展示。
新增命令 "project-manager.showOnboarding" 用于手动唤起引导教程。

--- a/package.json
+++ b/package.json
@@ -105,6 +105,10 @@
       {
         "command": "project-manager.deleteFolder",
         "title": "删除文件夹"
+      },
+      {
+        "command": "project-manager.showOnboarding",
+        "title": "打开 Better Project Manager 新手引导"
       }
     ],
     "menus": {
