feat(folder): 添加文件夹自定义图标功能
- 新增修改文件夹图标和重置文件夹图标命令
- 添加文件夹配置存储支持，独立保存图标等配置
- 在树视图中显示文件夹自定义图标
- 重命名/删除文件夹时同步更新配置
- 新增 FolderConfig 和 ConfigData 类型定义

--- a/package.json
+++ b/package.json
@@ -107,6 +107,14 @@
         "title": "删除文件夹"
       },
       {
+        "command": "project-manager.changeFolderIcon",
+        "title": "修改文件夹图标"
+      },
+      {
+        "command": "project-manager.removeFolderIcon",
+        "title": "重置文件夹图标"
+      },
+      {
         "command": "project-manager.showOnboarding",
         "title": "打开 Better Project Manager 新手引导"
       }
@@ -176,9 +184,19 @@
           "group": "folder-sider-group-1@1"
         },
         {
-          "command": "project-manager.deleteFolder",
+          "command": "project-manager.changeFolderIcon",
           "when": "view == betterProjectManagerSidebar && viewItem == folderItem",
           "group": "folder-sider-group-1@2"
+        },
+        {
+          "command": "project-manager.removeFolderIcon",
+          "when": "view == betterProjectManagerSidebar && viewItem == folderItem",
+          "group": "folder-sider-group-1@3"
+        },
+        {
+          "command": "project-manager.deleteFolder",
+          "when": "view == betterProjectManagerSidebar && viewItem == folderItem",
+          "group": "folder-sider-group-2@1"
         }
       ]
     },
